refactor: 공간 필터 검색 기능 개선